Fix bug that collapse is cut off due to max-height when there are many unbondings in web

--- a/src/ui/web/sections/cosmos/stake/style.module.scss
+++ b/src/ui/web/sections/cosmos/stake/style.module.scss
@@ -84,7 +84,7 @@
   overflow: hidden;
 
   &:global(.open) {
-    max-height: 600px;
+    max-height: 4000px;
   }
 }
 
